<resources>

    <string name="app_name">每日運勢抽籤</string>
    <string name="btn">運勢抽籤</string>
    <string name="text1">請輸入姓名 : </string>
    <string name="text2">請選擇出生日期 : </string>
    <string name="text3">您的姓名 : </string>
    <string name="text4">您的生日 : </string>
    <string name="text5">今日日期 : </string>
    <string name="btn2">返回</string>
    <string name="btn3">關閉程式</string>
    //星座月
    <string-array name="m">
        <item><font size="30"><font color='#0000FF'>1</font></font></item>
        <item><font size="30"><font color='#0000FF'>2</font></font></item>
        <item><font size="30"><font color='#0000FF'>3</font></font></item>
        <item><font size="30"><font color='#0000FF'>4</font></font></item>
        <item><font size="30"><font color='#0000FF'>5</font></font></item>
        <item><font size="30"><font color='#0000FF'>6</font></font></item>
        <item><font size="30"><font color='#0000FF'>7</font></font></item>
        <item><font size="30"><font color='#0000FF'>8</font></font></item>
        <item><font size="30"><font color='#0000FF'>9</font></font></item>
        <item><font size="30"><font color='#0000FF'>10</font></font></item>
        <item><font size="30"><font color='#0000FF'>11</font></font></item>
        <item><font size="30"><font color='#0000FF'>12</font></font></item>
    </string-array>
    //星座日
    <string-array name="d">
        <item><font size="30"><font color='#0000FF'>1</font></font></item>
        <item><font size="30"><font color='#0000FF'>2</font></font></item>
        <item><font size="30"><font color='#0000FF'>3</font></font></item>
        <item><font size="30"><font color='#0000FF'>4</font></font></item>
        <item><font size="30"><font color='#0000FF'>5</font></font></item>
        <item><font size="30"><font color='#0000FF'>6</font></font></item>
        <item><font size="30"><font color='#0000FF'>7</font></font></item>
        <item><font size="30"><font color='#0000FF'>8</font></font></item>
        <item><font size="30"><font color='#0000FF'>9</font></font></item>
        <item><font size="30"><font color='#0000FF'>10</font></font></item>
        <item><font size="30"><font color='#0000FF'>11</font></font></item>
        <item><font size="30"><font color='#0000FF'>12</font></font></item>
        <item><font size="30"><font color='#0000FF'>13</font></font></item>
        <item><font size="30"><font color='#0000FF'>14</font></font></item>
        <item><font size="30"><font color='#0000FF'>15</font></font></item>
        <item><font size="30"><font color='#0000FF'>16</font></font></item>
        <item><font size="30"><font color='#0000FF'>17</font></font></item>
        <item><font size="30"><font color='#0000FF'>18</font></font></item>
        <item><font size="30"><font color='#0000FF'>19</font></font></item>
        <item><font size="30"><font color='#0000FF'>20</font></font></item>
        <item><font size="30"><font color='#0000FF'>21</font></font></item>
        <item><font size="30"><font color='#0000FF'>22</font></font></item>
        <item><font size="30"><font color='#0000FF'>23</font></font></item>
        <item><font size="30"><font color='#0000FF'>24</font></font></item>
        <item><font size="30"><font color='#0000FF'>25</font></font></item>
        <item><font size="30"><font color='#0000FF'>26</font></font></item>
        <item><font size="30"><font color='#0000FF'>27</font></font></item>
        <item><font size="30"><font color='#0000FF'>28</font></font></item>
        <item><font size="30"><font color='#0000FF'>29</font></font></item>
        <item><font size="30"><font color='#0000FF'>30</font></font></item>
        <item><font size="30"><font color='#0000FF'>31</font></font></item>
    </string-array>

</resources>