<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background1"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="410dp"
        android:layout_height="650dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/text1"
                android:textSize="30sp"
                android:textColor="#FFFFFF"/>

            <EditText
                android:id="@+id/editText1"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/editext_bg"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="30sp"
                android:textColor="#FFFFFF"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_gravity="center_vertical"
                android:text="@string/text2"
                android:textSize="30sp"
                android:textColor="#FFFFFF"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="112dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

                <Spinner
                    android:id="@+id/spinnerM"
                    android:layout_width="73dp"
                    android:layout_height="66dp"

                    android:background="@drawable/editext_bg"
                    android:entries="@array/m" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:text="月"
                    android:textColor="#FFFFFF"
                    android:textSize="32sp"
                    tools:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="14dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <Spinner
                    android:id="@+id/spinnerD"
                    android:layout_width="73dp"
                    android:layout_height="66dp"
                    android:background="@drawable/editext_bg"
                    android:entries="@array/d" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="日"
                    android:textColor="#FFFFFF"
                    android:textSize="32sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center|top"
                android:background="@color/blue"
                android:onClick="Calculate"
                android:text="@string/btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn3"
            android:textColor="#FFFFFF"
            android:background="@color/black"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="每日運勢抽籤"
        android:textColor="#00FFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>