<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="263dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/text3"
                    android:textSize="30sp"
                    android:textColor="#FFFFFF"/>

                <LinearLayout
                    android:layout_width="17dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="51dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="14dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/text4"
                    android:textSize="30sp"
                    android:textColor="#FFFFFF"/>

                <LinearLayout
                    android:layout_width="17dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/textdate"
                    android:layout_width="0dp"
                    android:layout_height="61dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:textSize="30sp"
                    android:textColor="#FFFFFF"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="您的星座 :"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/textcon"
                    android:layout_width="141dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textColor="#FFEB3B"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="11dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="100dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="本日:"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp" />

                <TextClock
                    android:id="@+id/time"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:format12Hour="MM/dd"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="運勢"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/black"
        android:text="@string/btn2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="318dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="92dp"
                    android:layout_height="51dp"
                    android:layout_weight="1"
                    android:text="綜合運勢 :"
                    android:textColor="#9C27B0"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="146dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="35sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="工作運勢："
                    android:textColor="#2196F3"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/textjob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text=""
                    android:textColor="#00FFFF"
                    android:textSize="50sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="愛情運勢："
                    android:textColor="#F44336"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/textlove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text=""
                    android:textColor="#E91E63"
                    android:textSize="35sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="金錢運勢："
                    android:textColor="#FFC107"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/textmoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text=""
                    android:textColor="#FFC107"
                    android:textSize="50sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="每日精神小語 :"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="117dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="69dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/textword"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:textColor="#FFFFFF"
                        android:textSize="26sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>